<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <TextView
        android:id="@id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="40.0dip"
        android:layout_weight="4.0"
        android:gravity="center"
        android:text="@string/team_one"
        android:textSize="25.0sp" />

    <EditText
        android:id="@id/playerOneText"
        android:layout_width="200.0dip"
        android:layout_height="40.0dip"
        android:layout_gravity="center"
        android:layout_weight="1.0"
        android:gravity="center"
        android:hint="@string/player_1_name_hint"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:importantForAutofill="no" tools:targetApi="o"/>

    <EditText
        android:id="@id/playerThreeText"
        android:layout_width="200.0dip"
        android:layout_height="40.0dip"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:hint="@string/player_3_name_hint"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:importantForAutofill="no" tools:targetApi="o"/>

    <TextView
        android:id="@id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="40.0dip"
        android:layout_weight="4.0"
        android:gravity="center"
        android:text="@string/team_two"
        android:textSize="25.0sp" />

    <EditText
        android:id="@id/playerTwoText"
        android:layout_width="200.0dip"
        android:layout_height="40.0dip"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:hint="@string/player_2_name_hint"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:importantForAutofill="no" tools:targetApi="o"/>

    <EditText
        android:id="@id/playerFourText"
        android:layout_width="200.0dip"
        android:layout_height="40.0dip"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:hint="@string/player_4_name_hint"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:importantForAutofill="no" tools:targetApi="o"/>

    <Button
        android:id="@id/confirmButton"
        style="@android:style/Widget.Holo.Button"
        android:layout_width="fill_parent"
        android:layout_height="40.0dip"
        android:layout_weight="4.0"
        android:gravity="center"
        android:text="@string/confirm"
        android:textSize="20.0sp" />
</LinearLayout>